--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="script2.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
