--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <title>Speech to text conversion using JavaScript</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
@@ -17,18 +16,8 @@
 
     <body>
         <div class="mycontainer">
-
-            <h1>Speech to text conversion using JavaScript</h1>
-
-            <div class="mywebapp"> 
-                <div class="input">
-                    <textarea id="textbox" rows="6"></textarea>
-                </div>         
                 <button id="start-btn" title="Start">Start</button>
-                <p id="instructions">Press the Start button</p>
-            </div>
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="script.js"></script>
+                <p id="instructions">Press the Start button<p>
+        <script src="script2.js"></script>
     </body>
 </html>
