--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     <body>
         <div class="mycontainer">
-                <button id="start-btn" title="Start">Start</button>
-                <p id="instructions">Press the Start button<p>
+                <p id="info">hello</p>
+		<p id="scores"></p>
+		<p id="rounds"></p>
+		<p id="darts"></p>
+
         <script src="script2.js"></script>
     </body>
 </html>
