--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <div class="mycontainer">
-                <p id="info">hello</p>
+                <p id="info">hel</p>
 		<p id="scores"></p>
 		<p id="rounds"></p>
 		<p id="darts"></p>
