--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
     <body>
         <div class="mycontainer">
-                <p id="info">hel</p>
-		<p id="scores"></p>
-		<p id="rounds"></p>
-		<p id="darts"></p>
+            <H2 id="info"></h2>
+            <h3>Scores:</h3>
+            <div id="scores"></div>
+            <p>Remaining:</p><p id="remaining"></p>
+            <p>Darts:</p><p id="darts"></p>
 
         <script src="script2.js"></script>
     </body>
