--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <body>
         <div class="mycontainer">
-            <H2 id="info"></h2>
-            <h3>Scores:</h3>
-            <div id="scores"></div>
-            <p>Remaining:</p><p id="remaining"></p>
+            <H3 id="info">Push to start</h3>
+            <div id="scores">
+                
+            </div>
             <p>Darts:</p><p id="darts"></p>
 
         <script src="script2.js"></script>
