--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 
             </div>
             <p>Darts:</p><p id="darts"></p>
+            <p>LastCommand:</p><p id="lastCommand"></p>
 
         <script src="script2.js"></script>
     </body>
