--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div id="scores">
                 
             </div>
-            <p>Darts:</p><p id="darts"></p>
-            <p>LastCommand:</p><p id="lastCommand"></p>
+            <div><p>Darts:</p><p id="darts"></p></div>
+            <div><p>Last command:</p><p id="lastCommand"></p></div>
 
         <script src="script2.js"></script>
     </body>
