--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div id="scores">
                 
             </div>
-            <div><p>Darts:</p><p id="darts"></p></div>
+            
+            <div class="info"><p>Darts:</p><p id="darts"></p></div>
             <div><p>Last command:</p><p id="lastCommand"></p></div>
 
         <script src="script2.js"></script>
