--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
             </div>
 
         </div>
-        <script src="script2.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
