--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <div class="mycontainer">
+        <div class="mycontainer unselectable">
            
             <div id="cell-header">
                 <div class="row">
