--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </div>
             </div>
             <div id="scores">
-                <!-- <div class="row">
+		    <!---->
+		<div class="row">
                     <div class="cell">1</div>
                     <div class="cell">99</div>
                     <div class="cell">402</div>
@@ -54,19 +55,15 @@
                     <div class="cell">6</div>
                     <div class="cell">6</div>
                     <div class="cell">0</div>
-                </div> -->
+                </div> 
+		<!---->
             </div>
 
 
+			<p id="darts">0</p><p> darts</p>
             <div id="summary">
                 <div class="row">
-                    <p class="header">Darts:</p><p id="darts">0</p>
-                </div>
-                <div class="row">
-                    <p class="header">Info:</p><p id="info">Push to start</p>
-                </div>
-                <div class="row">
-                    <p class="header">Last:</p><p id="lastCommand">    
+                    <p id="info">Push to start</p>
                 </div>
             </div>
 
